--- a/src/plugins/ToolbarPlugin/ToolbarPlugin.css
+++ b/src/plugins/ToolbarPlugin/ToolbarPlugin.css
@@ -8,6 +8,10 @@
  */
 @namespace 'Verbum-toolbar';
 
+.toolbar {
+  height: 3rem;
+}
+
 .ToolbarPlugin__dialogActions {
   display: flex;
   flex-direction: row;
